Vertical overflow fix

--- a/styles.css
+++ b/styles.css
@@ -127,7 +127,7 @@ p {
 }
 
 .project-title-container {
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .text-container {
